docs/tests/nameres/control_flow/valid/Return.src
// Valid 

fn int main() {
    return 1;
}