docs/tests/nameres/control_flow/invalid/DoWhileNoExpr.src
// Invalid 

fn void main() {
    do {
        
    } while();
}